--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,8 @@ bcrypt>=4.0.1
 python-jose[cryptography]>=3.3.0
 gunicorn>=21.2.0
 dnspython
-mangum>=0.12.0  # Add this line for Vercel 
+requests>=2.31.0 
+pytest
+pytest-asyncio>=0.15.1
+
+
